[gd_scene load_steps=26 format=3 uid="uid://bvhexletb3i7r"]

[ext_resource type="Script" uid="uid://bb6iv0v1hws4y" path="res://scenes/Enemy/Scripts/Enemy.gd" id="1_55jtl"]
[ext_resource type="Script" uid="uid://dlnv0wjvxdpxo" path="res://scripts/LevelComponent.gd" id="2_5wwv6"]
[ext_resource type="Script" uid="uid://dqp0iw4nkxyn4" path="res://scripts/StatsComponent.gd" id="2_ft8do"]
[ext_resource type="Texture2D" uid="uid://ctpn601ys4uel" path="res://assets/taigaSprites_ [version 1.0]/troll_.png" id="2_mpr68"]
[ext_resource type="Script" uid="uid://v5q16ak0mw7r" path="res://scripts/HealthComponent.gd" id="3_mpr68"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1i2q2"]
atlas = ExtResource("2_mpr68")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly5gv"]
atlas = ExtResource("2_mpr68")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82o86"]
atlas = ExtResource("2_mpr68")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gqeq"]
atlas = ExtResource("2_mpr68")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6xdp"]
atlas = ExtResource("2_mpr68")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft8do"]
atlas = ExtResource("2_mpr68")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wwv6"]
atlas = ExtResource("2_mpr68")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vja8"]
atlas = ExtResource("2_mpr68")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwav8"]
atlas = ExtResource("2_mpr68")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_isvm2"]
atlas = ExtResource("2_mpr68")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr8dl"]
atlas = ExtResource("2_mpr68")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_axa8o"]
atlas = ExtResource("2_mpr68")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iqch"]
atlas = ExtResource("2_mpr68")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3f71"]
atlas = ExtResource("2_mpr68")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksmwx"]
atlas = ExtResource("2_mpr68")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq86d"]
atlas = ExtResource("2_mpr68")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_joqoj"]
atlas = ExtResource("2_mpr68")
region = Rect2(224, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1i2q2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1i2q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ly5gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82o86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gqeq")
}],
"loop": false,
"name": &"death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6xdp")
}],
"loop": true,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft8do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wwv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vja8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwav8")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_isvm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr8dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axa8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iqch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3f71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksmwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq86d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joqoj")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ft8do"]
size = Vector2(12, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mpr68"]
size = Vector2(14, 17)

[node name="Enemy" type="CharacterBody2D" groups=["Enemies"]]
z_index = 2
y_sort_enabled = true
script = ExtResource("1_55jtl")
speed = 30
experience_drop = 20.0

[node name="LevelComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_5wwv6")
metadata/_custom_type_script = "uid://dlnv0wjvxdpxo"

[node name="StatsComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_ft8do")
base_max_health = 100
base_attack = 10
metadata/_custom_type_script = "uid://dqp0iw4nkxyn4"

[node name="HealthComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_mpr68")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_1i2q2")
animation = &"hurt"
autoplay = "idle"

[node name="Collision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_ft8do")

[node name="DamageArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_mpr68")
